samples/original.template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  WSO2 API Manager deployment with WSO2 API Manager Analytics for AWS
  Marketplace
Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Label:
          default: Cluster Configuration
        Parameters:
          - KeyPairName
          - AWSAccessKeySecret
      - Label:
          default: Network Configuration
        Parameters:
          - CertificateName
      - Label:
          default: Database Configuration
        Parameters:
          - DBUsername
          - DBPassword
    ParameterLabels:
      AWSAccessKeySecret:
        default: AWS Access Secret Key
      CertificateName:
        default: Which certificate should be used at the Load Balancer for APIM?
      DBUsername:
        default: APIM Database Master username?
      DBPassword:
        default: APIM Database Master password
Resources:
  WSO2AM1SIMPLE1VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
  PublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref WSO2AM1SIMPLE1VPC
      CidrBlock: 10.0.254.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - '0'
        - !GetAZs ''
  PublicInternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties: {}
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref WSO2AM1SIMPLE1VPC
  EC2SRTA4ALO8:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet
  PublicRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      GatewayId: !Ref PublicInternetGateway
      DestinationCidrBlock: 0.0.0.0/0
  EC2VPCG1W38G:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref PublicInternetGateway
      VpcId: !Ref WSO2AM1SIMPLE1VPC

  AMLCNode1:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
    Properties:
      ImageId: !FindInMap
        - AWSAMIRegionMap
        - !Ref 'AWS::Region'
        - Ubuntu140464bit
      InstanceType: t2.medium
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: '20'
            VolumeType: gp2
            DeleteOnTermination: 'true'
      KeyName: !Ref KeyPairName
      SecurityGroups:
        - !Ref ProductSecurityGroup
      IamInstanceProfile: !Ref AWSCliInstanceProfile
      UserData: !Base64
        'Fn::Join':
          - |+

          - - '#!/bin/bash'
            - set -e
            - 'export PATH=~/.local/bin:$PATH'
            - !Join
              - ''
              - - sed -i "s/CF_ENI_ID/
                - !Ref AMENI1
                - /g" /usr/local/bin/allocate_ips.sh
            - !Join
              - ''
              - - sed -i "s/CF_ALLOC_ID/
                - !GetAtt
                  - AMEIP1
                  - AllocationId
                - /g" /usr/local/bin/allocate_ips.sh
            - >-
              sed -i "s/CF_DEFAULT_GATEWAY/10.0.254.1/g"
              /usr/local/bin/allocate_ips.sh
            - !Join
              - ''
              - - sed -i "s/CF_ENI_PRIVATE_IP/
                - !GetAtt
                  - AMENI1
                  - PrimaryPrivateIpAddress
                - /g" /usr/local/bin/allocate_ips.sh
            - mkdir -p ~/.aws
            - cat > ~/.aws/config << EOF
            - '[default]'
            - !Join
              - ''
              - - 'region = '
                - !Ref 'AWS::Region'
            - output = text
            - EOF
            - bash /usr/local/bin/allocate_ips.sh
            - mkdir -p /mnt/efs
            - !Join
              - ''
              - - echo "
                - !Ref AMNFSMount
                - .efs.
                - !Ref 'AWS::Region'
                - .amazonaws.com
                - >-
                  :/ /mnt/efs nfs4
                  nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2
                  0 0" >> /etc/fstab
            - !Join
              - ''
              - - sed -i "s/CF_ELB_DNS_NAME/
                - !GetAtt
                  - WSO2AMELB
                  - DNSName
                - >-
                  /g"
                  /etc/puppet/hieradata/dev/wso2/wso2am_runtime/pattern-2/default.yaml
            - !Join
              - ''
              - - sed -i "s/CF_APIM_IP/
                - !GetAtt
                  - AMENI1
                  - PrimaryPrivateIpAddress
                - >-
                  /g"
                  /etc/puppet/hieradata/dev/wso2/wso2am_runtime/pattern-2/default.yaml
            - !Join
              - ''
              - - sed -i "s/CF_ANALYTICS_IP/
                - !GetAtt
                  - AnalyticsENI1
                  - PrimaryPrivateIpAddress
                - >-
                  /g"
                  /etc/puppet/hieradata/dev/wso2/wso2am_runtime/pattern-2/default.yaml
            - !Join
              - ''
              - - sed -i "s/CF_DB_USERNAME/
                - !Ref DBUsername
                - /g" /etc/puppet/hieradata/dev/wso2/common.yaml
            - !Join
              - ''
              - - sed -i "s/CF_DB_PASSWORD/
                - !Ref DBPassword
                - /g" /etc/puppet/hieradata/dev/wso2/common.yaml
            - !Join
              - ''
              - - sed -i "s/CF_RDS_URL/
                - !GetAtt
                  - WSO2AMDB
                  - Endpoint.Address
                - /g" /etc/puppet/hieradata/dev/wso2/common.yaml
            - mount -a -t nfs4
            - export DB_NAME=WSO2AM_DB
            - !Join
              - ''
              - - export DB_HOSTNAME=
                - !GetAtt
                  - WSO2AMDB
                  - Endpoint.Address
            - !Join
              - ''
              - - export DB_PORT=
                - !GetAtt
                  - WSO2AMDB
                  - Endpoint.Port
            - !Join
              - ''
              - - export DB_USERNAME=
                - !Ref DBUsername
            - !Join
              - ''
              - - export DB_PASSWORD=
                - !Ref DBPassword
            - echo "Waiting for Cluster lock..."
            - bash /usr/local/bin/acquire_lock.sh
            - export FACTER_product_name=wso2am_runtime
            - export FACTER_product_version=2.1.0
            - export FACTER_product_profile=default
            - export FACTER_vm_type=openstack
            - export FACTER_environment=dev
            - export FACTER_platform=default
            - export FACTER_use_hieradata=true
            - export FACTER_pattern=pattern-2
            - >-
              puppet apply -e "include wso2am_runtime"
              --modulepath=/etc/puppet/modules
              --hiera_config=/etc/puppet/hiera.yaml
            - !Join
              - ''
              - - sed -i "s/CF_DB_USERNAME/
                - !Ref DBUsername
                - /g" /usr/local/bin/provision_db_apim.sh
            - !Join
              - ''
              - - sed -i "s/CF_DB_PASSWORD/
                - !Ref DBPassword
                - /g" /usr/local/bin/provision_db_apim.sh
            - !Join
              - ''
              - - sed -i "s/CF_DB_HOST/
                - !GetAtt
                  - WSO2AMDB
                  - Endpoint.Address
                - /g" /usr/local/bin/provision_db_apim.sh
            - !Join
              - ''
              - - sed -i "s/CF_DB_PORT/
                - !GetAtt
                  - WSO2AMDB
                  - Endpoint.Port
                - /g" /usr/local/bin/provision_db_apim.sh
            - bash /usr/local/bin/provision_db_apim.sh
            - echo "Releasing lock..."
            - /usr/local/bin/sync_lock apim unlock
            - 'if [ ! -d "/mnt/efs/synapse-configs" ]; then'
            - '    mkdir -p /mnt/efs/synapse-configs'
            - '    cp -r /mnt/wso2am-2.1.0/repository/deployment/server/synapse-configs /mnt/efs/synapse-configs'
            - fi
            - >-
              rm -rf
              /mnt/wso2am-2.1.0/repository/deployment/server/synapse-configs
            - >-
              ln -s /mnt/efs/synapse-configs/synapse-configs
              /mnt/wso2am-2.1.0/repository/deployment/server/synapse-configs
            - apt-get --purge remove puppet mysql-client -y
            - rm -rf /etc/puppet
            - /mnt/wso2am-2.1.0/bin/wso2server.sh start
            - echo 'export HISTTIMEFORMAT="%F %T "' >> /etc/profile.d/history.sh
            - cat /dev/null > ~/.bash_history && history -c
    DependsOn:
      - ProductSecurityGroup
      - WSO2AMELB
      - EC2VPCG1W38G
  AMLCNode2:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
    Properties:
      ImageId: !FindInMap
        - AWSAMIRegionMap
        - !Ref 'AWS::Region'
        - Ubuntu140464bit
      InstanceType: t2.medium
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: '20'
            VolumeType: gp2
            DeleteOnTermination: 'true'
      KeyName: !Ref KeyPairName
      SecurityGroups:
        - !Ref ProductSecurityGroup
      IamInstanceProfile: !Ref AWSCliInstanceProfile
      UserData: !Base64
        'Fn::Join':
          - |+

          - - '#!/bin/bash'
            - set -e
            - 'export PATH=~/.local/bin:$PATH'
            - !Join
              - ''
              - - sed -i "s/CF_ENI_ID/
                - !Ref AMENI2
                - /g" /usr/local/bin/allocate_ips.sh
            - !Join
              - ''
              - - sed -i "s/CF_ALLOC_ID/
                - !GetAtt
                  - AMEIP2
                  - AllocationId
                - /g" /usr/local/bin/allocate_ips.sh
            - >-
              sed -i "s/CF_DEFAULT_GATEWAY/10.0.252.1/g"
              /usr/local/bin/allocate_ips.sh
            - !Join
              - ''
              - - sed -i "s/CF_ENI_PRIVATE_IP/
                - !GetAtt
                  - AMENI2
                  - PrimaryPrivateIpAddress
                - /g" /usr/local/bin/allocate_ips.sh
            - mkdir -p ~/.aws
            - cat > ~/.aws/config << EOF
            - '[default]'
            - !Join
              - ''
              - - 'region = '
                - !Ref 'AWS::Region'
            - output = text
            - EOF
            - bash /usr/local/bin/allocate_ips.sh
            - mkdir -p /mnt/efs
            - !Join
              - ''
              - - echo "
                - !Ref AMNFSMount
                - .efs.
                - !Ref 'AWS::Region'
                - .amazonaws.com
                - >-
                  :/ /mnt/efs nfs4
                  nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2
                  0 0" >> /etc/fstab
            - !Join
              - ''
              - - sed -i "s/CF_ELB_DNS_NAME/
                - !GetAtt
                  - WSO2AMELB
                  - DNSName
                - >-
                  /g"
                  /etc/puppet/hieradata/dev/wso2/wso2am_runtime/pattern-2/default.yaml
            - !Join
              - ''
              - - sed -i "s/CF_APIM_IP/
                - !GetAtt
                  - AMENI2
                  - PrimaryPrivateIpAddress
                - >-
                  /g"
                  /etc/puppet/hieradata/dev/wso2/wso2am_runtime/pattern-2/default.yaml
            - !Join
              - ''
              - - sed -i "s/CF_ANALYTICS_IP/
                - !GetAtt
                  - AnalyticsENI1
                  - PrimaryPrivateIpAddress
                - >-
                  /g"
                  /etc/puppet/hieradata/dev/wso2/wso2am_runtime/pattern-2/default.yaml
            - !Join
              - ''
              - - sed -i "s/CF_DB_USERNAME/
                - !Ref DBUsername
                - /g" /etc/puppet/hieradata/dev/wso2/common.yaml
            - !Join
              - ''
              - - sed -i "s/CF_DB_PASSWORD/
                - !Ref DBPassword
                - /g" /etc/puppet/hieradata/dev/wso2/common.yaml
            - !Join
              - ''
              - - sed -i "s/CF_RDS_URL/
                - !GetAtt
                  - WSO2AMDB
                  - Endpoint.Address
                - /g" /etc/puppet/hieradata/dev/wso2/common.yaml
            - mount -a -t nfs4
            - export DB_NAME=WSO2AM_DB
            - !Join
              - ''
              - - export DB_HOSTNAME=
                - !GetAtt
                  - WSO2AMDB
                  - Endpoint.Address
            - !Join
              - ''
              - - export DB_PORT=
                - !GetAtt
                  - WSO2AMDB
                  - Endpoint.Port
            - !Join
              - ''
              - - export DB_USERNAME=
                - !Ref DBUsername
            - !Join
              - ''
              - - export DB_PASSWORD=
                - !Ref DBPassword
            - echo "Waiting for Cluster lock..."
            - bash /usr/local/bin/acquire_lock.sh
            - export FACTER_product_name=wso2am_runtime
            - export FACTER_product_version=2.1.0
            - export FACTER_product_profile=default
            - export FACTER_vm_type=openstack
            - export FACTER_environment=dev
            - export FACTER_platform=default
            - export FACTER_use_hieradata=true
            - export FACTER_pattern=pattern-2
            - >-
              puppet apply -e "include wso2am_runtime"
              --modulepath=/etc/puppet/modules
              --hiera_config=/etc/puppet/hiera.yaml
            - !Join
              - ''
              - - sed -i "s/CF_DB_USERNAME/
                - !Ref DBUsername
                - /g" /usr/local/bin/provision_db_apim.sh
            - !Join
              - ''
              - - sed -i "s/CF_DB_PASSWORD/
                - !Ref DBPassword
                - /g" /usr/local/bin/provision_db_apim.sh
            - !Join
              - ''
              - - sed -i "s/CF_DB_HOST/
                - !GetAtt
                  - WSO2AMDB
                  - Endpoint.Address
                - /g" /usr/local/bin/provision_db_apim.sh
            - !Join
              - ''
              - - sed -i "s/CF_DB_PORT/
                - !GetAtt
                  - WSO2AMDB
                  - Endpoint.Port
                - /g" /usr/local/bin/provision_db_apim.sh
            - bash /usr/local/bin/provision_db_apim.sh
            - echo "Releasing lock..."
            - /usr/local/bin/sync_lock apim unlock
            - 'if [ ! -d "/mnt/efs/synapse-configs" ]; then'
            - '    mkdir -p /mnt/efs/synapse-configs'
            - '    cp -r /mnt/wso2am-2.1.0/repository/deployment/server/synapse-configs /mnt/efs/synapse-configs'
            - fi
            - >-
              rm -rf
              /mnt/wso2am-2.1.0/repository/deployment/server/synapse-configs
            - >-
              ln -s /mnt/efs/synapse-configs/synapse-configs
              /mnt/wso2am-2.1.0/repository/deployment/server/synapse-configs
            - apt-get --purge remove puppet mysql-client -y
            - rm -rf /etc/puppet
            - /mnt/wso2am-2.1.0/bin/wso2server.sh start
            - echo 'export HISTTIMEFORMAT="%F %T "' >> /etc/profile.d/history.sh
            - cat /dev/null > ~/.bash_history && history -c
    DependsOn:
      - ProductSecurityGroup
      - WSO2AMELB
      - EC2VPCG1W38G

  ProductSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Product Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '2049'
          ToPort: '2049'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '9443'
          ToPort: '9443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '5701'
          ToPort: '5701'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '9763'
          ToPort: '9763'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8243'
          ToPort: '8243'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8280'
          ToPort: '8280'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
          CidrIp: 0.0.0.0/0
        - IpProtocol: ICMP
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '10389'
          ToPort: '10389'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8000'
          ToPort: '8000'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '5701'
          ToPort: '5701'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '5672'
          ToPort: '5672'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '9611'
          ToPort: '9611'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '9711'
          ToPort: '9711'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '10397'
          ToPort: '10397'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '7611'
          ToPort: '7611'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '7711'
          ToPort: '7711'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: '0'
          ToPort: '0'
          CidrIp: 0.0.0.0/0
      VpcId: !Ref WSO2AM1SIMPLE1VPC
  WSO2AMASGroupSN1:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      LaunchConfigurationName: !Ref AMLCNode1
      DesiredCapacity: 1
      MinSize: 1
      MaxSize: 1
      LoadBalancerNames:
        - !Ref WSO2AMELB
      VPCZoneIdentifier:
        - !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: WSO2AM-Instance
          PropagateAtLaunch: 'true'
        - Key: Product
          Value: WSO2AM
          PropagateAtLaunch: 'true'
        - Key: Version
          Value: 2.1.0
          PropagateAtLaunch: 'true'
        - Key: Cluster
          Value: WSO2AM210SIMPLE
          PropagateAtLaunch: 'true'
    DependsOn:
      - AMLCNode2
      - WSO2AMELB
      - WSO2AMAnalyticsASGSN1
  WSO2AMASGroupSN2:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      LaunchConfigurationName: !Ref AMLCNode2
      DesiredCapacity: 1
      MinSize: 1
      MaxSize: 1
      LoadBalancerNames:
        - !Ref WSO2AMELB
      VPCZoneIdentifier:
        - !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: WSO2AM-Instance
          PropagateAtLaunch: 'true'
        - Key: Product
          Value: WSO2AM
          PropagateAtLaunch: 'true'
        - Key: Version
          Value: 2.1.0
          PropagateAtLaunch: 'true'
        - Key: Cluster
          Value: WSO2AM210SIMPLE
          PropagateAtLaunch: 'true'
    DependsOn:
      - AMLCNode2
      - WSO2AMELB
      - WSO2AMAnalyticsASGSN1
  WSO2AMELB:
    Type: 'AWS::ElasticLoadBalancing::LoadBalancer'
    Properties:
      CrossZone: true
      SecurityGroups:
        - !Ref ProductSecurityGroup
      Subnets:
        - !Ref PublicSubnet2
        - !Ref PublicSubnet
      LBCookieStickinessPolicy:
        - PolicyName: LBStickyPolicy
      Listeners:
        - LoadBalancerPort: '9443'
          InstancePort: '9443'
          Protocol: HTTPS
          InstanceProtocol: HTTPS
          PolicyNames:
            - LBStickyPolicy
          SSLCertificateId: !Join
            - ''
            - - 'arn:aws:iam::'
              - !Ref 'AWS::AccountId'
              - ':server-certificate'
              - /
              - !Ref CertificateName
        - LoadBalancerPort: '8243'
          InstancePort: '8243'
          Protocol: HTTPS
          InstanceProtocol: HTTPS
          PolicyNames:
            - LBStickyPolicy
          SSLCertificateId: !Join
            - ''
            - - 'arn:aws:iam::'
              - !Ref 'AWS::AccountId'
              - ':server-certificate'
              - /
              - !Ref CertificateName
        - LoadBalancerPort: '9763'
          InstancePort: '9763'
          Protocol: HTTP
          InstanceProtocol: HTTP
          PolicyNames:
            - LBStickyPolicy
        - LoadBalancerPort: '10389'
          InstancePort: '10389'
          Protocol: TCP
          InstanceProtocol: TCP
        - LoadBalancerPort: '8000'
          InstancePort: '8000'
          Protocol: TCP
          InstanceProtocol: TCP
        - LoadBalancerPort: '5701'
          InstancePort: '5701'
          Protocol: TCP
          InstanceProtocol: TCP
        - LoadBalancerPort: '5672'
          InstancePort: '5672'
          Protocol: TCP
          InstanceProtocol: TCP
        - LoadBalancerPort: '10397'
          InstancePort: '10397'
          Protocol: TCP
          InstanceProtocol: TCP
      HealthCheck:
        Target: 'TCP:9763'
        HealthyThreshold: '3'
        UnhealthyThreshold: '5'
        Interval: '10'
        Timeout: '5'
    DependsOn:
      - ProductSecurityGroup
  WSO2AMDB:
    Type: 'AWS::RDS::DBInstance'
    Properties:
      VPCSecurityGroups:
        - !Ref ProductSecurityGroup
      DBInstanceClass: db.t2.medium
      AllocatedStorage: 5
      BackupRetentionPeriod: '0'
      DBInstanceIdentifier: wso2amdb
      DBName: WSO2AM_DB
      Engine: MySQL
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      MultiAZ: 'false'
      StorageType: gp2
      DBSubnetGroupName: !Ref WSO2AMDBSubnetGroup
  WSO2AMAnalyticsDB:
    Type: 'AWS::RDS::DBInstance'
    Properties:
      VPCSecurityGroups:
        - !Ref ProductSecurityGroup
      DBInstanceClass: db.t2.medium
      AllocatedStorage: 5
      BackupRetentionPeriod: '0'
      DBInstanceIdentifier: wso2amanalyticsdb
      DBName: WSO2AMAnalytics_DB
      Engine: MySQL
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      MultiAZ: 'false'
      StorageType: gp2
      DBSubnetGroupName: !Ref WSO2AMDBSubnetGroup
  WSO2AMDBSubnetGroup:
    Type: 'AWS::RDS::DBSubnetGroup'
    Properties:
      DBSubnetGroupDescription: DB Subnet Group
      SubnetIds:
        - !Ref PublicSubnet
        - !Ref PublicSubnet2
  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref WSO2AM1SIMPLE1VPC
      CidrBlock: 10.0.252.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - '1'
        - !GetAZs ''
  PublicRouteTable2:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref WSO2AM1SIMPLE1VPC
  PublicRoute2:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PublicRouteTable2
      GatewayId: !Ref PublicInternetGateway
      DestinationCidrBlock: 0.0.0.0/0
  EC2SRTA21VEF:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable2
      SubnetId: !Ref PublicSubnet2
  AMNFSMount:
    Type: 'AWS::EFS::FileSystem'
    Properties: {}
  AMAnalyticsNFSMount:
    Type: 'AWS::EFS::FileSystem'
    Properties: {}
  EFSMtSN1:
    Type: 'AWS::EFS::MountTarget'
    Properties:
      SubnetId: !Ref PublicSubnet
      FileSystemId: !Ref AMNFSMount
      SecurityGroups:
        - !Ref ProductSecurityGroup
  EFSMtSN2:
    Type: 'AWS::EFS::MountTarget'
    Properties:
      SubnetId: !Ref PublicSubnet2
      FileSystemId: !Ref AMNFSMount
      SecurityGroups:
        - !Ref ProductSecurityGroup
  AnalyticsEFSMtSN1:
    Type: 'AWS::EFS::MountTarget'
    Properties:
      SubnetId: !Ref PublicSubnet
      FileSystemId: !Ref AMAnalyticsNFSMount
      SecurityGroups:
        - !Ref ProductSecurityGroup
  AnalyticsEFSMtSN2:
    Type: 'AWS::EFS::MountTarget'
    Properties:
      SubnetId: !Ref PublicSubnet2
      FileSystemId: !Ref AMAnalyticsNFSMount
      SecurityGroups:
        - !Ref ProductSecurityGroup
  WSO2AMAnalyticsASGSN1:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      LaunchConfigurationName: !Ref WSO2AMAnalyticsLC
      DesiredCapacity: 1
      MinSize: 1
      MaxSize: 1
      LoadBalancerNames:
        - !Ref WSO2AMAnalyticsELB
      VPCZoneIdentifier:
        - !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: WSO2AM-Analytics-Instance
          PropagateAtLaunch: 'true'
        - Key: Product
          Value: WSO2AM-Analytics
          PropagateAtLaunch: 'true'
        - Key: Version
          Value: 2.1.0
          PropagateAtLaunch: 'true'
        - Key: Cluster
          Value: WSO2AMAnalytics210SIMPLE
          PropagateAtLaunch: 'true'
    DependsOn:
      - WSO2AMAnalyticsLC
      - WSO2AMAnalyticsELB
      - WSO2AMELB
  WSO2AMAnalyticsLC:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
    Properties:
      ImageId: !FindInMap
        - AWSAnalyticsAMIRegionMap
        - !Ref 'AWS::Region'
        - Ubuntu140464bit
      InstanceType: t2.medium
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: '20'
            VolumeType: gp2
            DeleteOnTermination: 'true'
      KeyName: !Ref KeyPairName
      SecurityGroups:
        - !Ref ProductSecurityGroup
      IamInstanceProfile: !Ref AWSCliInstanceProfile
      UserData: !Base64
        'Fn::Join':
          - |+

          - - '#!/bin/bash'
            - set -e
            - 'export PATH=~/.local/bin:$PATH'
            - !Join
              - ''
              - - sed -i "s/CF_ENI_ID/
                - !Ref AnalyticsENI1
                - /g" /usr/local/bin/allocate_ips.sh
            - !Join
              - ''
              - - sed -i "s/CF_ALLOC_ID/
                - !GetAtt
                  - AnalyticsEIP1
                  - AllocationId
                - /g" /usr/local/bin/allocate_ips.sh
            - >-
              sed -i "s/CF_DEFAULT_GATEWAY/10.0.254.1/g"
              /usr/local/bin/allocate_ips.sh
            - !Join
              - ''
              - - sed -i "s/CF_ENI_PRIVATE_IP/
                - !GetAtt
                  - AnalyticsENI1
                  - PrimaryPrivateIpAddress
                - /g" /usr/local/bin/allocate_ips.sh
            - mkdir -p ~/.aws
            - cat > ~/.aws/config << EOF
            - '[default]'
            - !Join
              - ''
              - - 'region = '
                - !Ref 'AWS::Region'
            - output = text
            - EOF
            - bash /usr/local/bin/allocate_ips.sh
            - mkdir -p /mnt/efs
            - !Join
              - ''
              - - echo "
                - !Ref AMAnalyticsNFSMount
                - .efs.
                - !Ref 'AWS::Region'
                - .amazonaws.com
                - >-
                  :/ /mnt/efs nfs4
                  nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2
                  0 0" >> /etc/fstab
            - !Join
              - ''
              - - sed -i "s/CF_ANALYTICS_ELB_DNS_NAME/
                - !GetAtt
                  - WSO2AMELB
                  - DNSName
                - >-
                  /g"
                  /etc/puppet/hieradata/dev/wso2/wso2am_analytics/pattern-1/default.yaml
            - !Join
              - ''
              - - sed -i "s/CF_ANALYTICS_RDS_HOST/
                - !GetAtt
                  - WSO2AMAnalyticsDB
                  - Endpoint.Address
                - >-
                  /g"
                  /etc/puppet/hieradata/dev/wso2/wso2am_analytics/pattern-1/default.yaml
            - !Join
              - ''
              - - sed -i "s/CF_DB_USERNAME/
                - !Ref DBUsername
                - /g" /etc/puppet/hieradata/dev/wso2/common.yaml
            - !Join
              - ''
              - - sed -i "s/CF_DB_PASSWORD/
                - !Ref DBPassword
                - /g" /etc/puppet/hieradata/dev/wso2/common.yaml
            - !Join
              - ''
              - - sed -i "s/CF_RDS_URL/
                - !GetAtt
                  - WSO2AMDB
                  - Endpoint.Address
                - /g" /etc/puppet/hieradata/dev/wso2/common.yaml
            - mount -a -t nfs4
            - export DB_NAME=WSO2AM_DB
            - !Join
              - ''
              - - export DB_HOSTNAME=
                - !GetAtt
                  - WSO2AMDB
                  - Endpoint.Address
            - !Join
              - ''
              - - export DB_PORT=
                - !GetAtt
                  - WSO2AMDB
                  - Endpoint.Port
            - !Join
              - ''
              - - export DB_USERNAME=
                - !Ref DBUsername
            - !Join
              - ''
              - - export DB_PASSWORD=
                - !Ref DBPassword
            - echo "Waiting for Cluster lock..."
            - bash /usr/local/bin/acquire_lock.sh
            - export FACTER_product_name=wso2am_analytics
            - export FACTER_product_version=2.1.0
            - export FACTER_product_profile=default
            - export FACTER_vm_type=openstack
            - export FACTER_environment=dev
            - export FACTER_platform=default
            - export FACTER_use_hieradata=true
            - export FACTER_pattern=pattern-1
            - >-
              puppet apply -e "include wso2am_analytics"
              --modulepath=/etc/puppet/modules
              --hiera_config=/etc/puppet/hiera.yaml
            - !Join
              - ''
              - - sed -i "s/CF_DB_USERNAME/
                - !Ref DBUsername
                - /g" /usr/local/bin/provision_db_analytics.sh
            - !Join
              - ''
              - - sed -i "s/CF_DB_PASSWORD/
                - !Ref DBPassword
                - /g" /usr/local/bin/provision_db_analytics.sh
            - !Join
              - ''
              - - sed -i "s/CF_DB_HOST/
                - !GetAtt
                  - WSO2AMAnalyticsDB
                  - Endpoint.Address
                - /g" /usr/local/bin/provision_db_analytics.sh
            - !Join
              - ''
              - - sed -i "s/CF_DB_PORT/
                - !GetAtt
                  - WSO2AMAnalyticsDB
                  - Endpoint.Port
                - /g" /usr/local/bin/provision_db_analytics.sh
            - bash /usr/local/bin/provision_db_analytics.sh
            - echo "Releasing lock..."
            - /usr/local/bin/sync_lock apim unlock
            - apt-get --purge remove puppet mysql-client -y
            - rm -rf /etc/puppet
            - /mnt/wso2am-analytics-2.1.0/bin/wso2server.sh start
            - echo 'export HISTTIMEFORMAT="%F %T "' >> /etc/profile.d/history.sh
            - cat /dev/null > ~/.bash_history && history -c
    DependsOn:
      - ProductSecurityGroup
      - WSO2AMAnalyticsELB
      - EC2VPCG1W38G
  WSO2AMAnalyticsELB:
    Type: 'AWS::ElasticLoadBalancing::LoadBalancer'
    Properties:
      CrossZone: true
      SecurityGroups:
        - !Ref ProductSecurityGroup
      Subnets:
        - !Ref PublicSubnet2
        - !Ref PublicSubnet
      LBCookieStickinessPolicy:
        - PolicyName: LBStickyPolicy
      Listeners:
        - LoadBalancerPort: '9443'
          InstancePort: '9443'
          Protocol: HTTPS
          InstanceProtocol: HTTPS
          PolicyNames:
            - LBStickyPolicy
          SSLCertificateId: !Join
            - ''
            - - 'arn:aws:iam::'
              - !Ref 'AWS::AccountId'
              - ':server-certificate'
              - /
              - !Ref CertificateName
        - LoadBalancerPort: '8243'
          InstancePort: '8243'
          Protocol: HTTPS
          InstanceProtocol: HTTPS
          PolicyNames:
            - LBStickyPolicy
          SSLCertificateId: !Join
            - ''
            - - 'arn:aws:iam::'
              - !Ref 'AWS::AccountId'
              - ':server-certificate'
              - /
              - !Ref CertificateName
        - LoadBalancerPort: '9763'
          InstancePort: '9763'
          Protocol: HTTP
          InstanceProtocol: HTTP
          PolicyNames:
            - LBStickyPolicy
        - LoadBalancerPort: '10389'
          InstancePort: '10389'
          Protocol: TCP
          InstanceProtocol: TCP
        - LoadBalancerPort: '8000'
          InstancePort: '8000'
          Protocol: TCP
          InstanceProtocol: TCP
        - LoadBalancerPort: '5701'
          InstancePort: '5701'
          Protocol: TCP
          InstanceProtocol: TCP
        - LoadBalancerPort: '5672'
          InstancePort: '5672'
          Protocol: TCP
          InstanceProtocol: TCP
        - LoadBalancerPort: '10397'
          InstancePort: '10397'
          Protocol: TCP
          InstanceProtocol: TCP
      HealthCheck:
        Target: 'TCP:9763'
        HealthyThreshold: '3'
        UnhealthyThreshold: '5'
        Interval: '10'
        Timeout: '5'
    DependsOn:
      - ProductSecurityGroup
  AMENI1:
    Type: 'AWS::EC2::NetworkInterface'
    Properties:
      Description: AM ENI for Node1
      SubnetId: !Ref PublicSubnet
      GroupSet:
        - !Ref ProductSecurityGroup
  AMENI2:
    Type: 'AWS::EC2::NetworkInterface'
    Properties:
      Description: AM ENI for Node2
      SubnetId: !Ref PublicSubnet2
      GroupSet:
        - !Ref ProductSecurityGroup
  AnalyticsENI1:
    Type: 'AWS::EC2::NetworkInterface'
    Properties:
      Description: Analytics ENI for Node1
      SubnetId: !Ref PublicSubnet
      GroupSet:
        - !Ref ProductSecurityGroup
  AWSCliInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: /
      Roles:
        - !Ref APIMDeploymentCLIRole
      InstanceProfileName: CLIInstanceProfileForAMDeployment
  APIMDeploymentCLIRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      Policies:
        - PolicyName: all-ec2TODO
          PolicyDocument:
            Statement:
              - Effect: Allow
                Action:
                  - 'ec2:*'
                Resource: '*'

  AMEIP1:
    Type: 'AWS::EC2::EIP'
    Properties: {}
  AMEIPAssociation1:
    Type: 'AWS::EC2::EIPAssociation'
    Properties:
      AllocationId: !GetAtt
        - AMEIP1
        - AllocationId
      NetworkInterfaceId: !Ref AMENI1
  AMEIP2:
    Type: 'AWS::EC2::EIP'
    Properties: {}
  AMEIPAssociation2:
    Type: 'AWS::EC2::EIPAssociation'
    Properties:
      AllocationId: !GetAtt
        - AMEIP2
        - AllocationId
      NetworkInterfaceId: !Ref AMENI2
  AnalyticsEIP1:
    Type: 'AWS::EC2::EIP'
    Properties: {}
  AnalyticsEIPAssociation1:
    Type: 'AWS::EC2::EIPAssociation'
    Properties:
      AllocationId: !GetAtt
        - AnalyticsEIP1
        - AllocationId
      NetworkInterfaceId: !Ref AnalyticsENI1
#Outputs:
#  Publisher:
#    Value: !Join
#      - ''
#      - - 'https://'
#        - !GetAtt
#          - WSO2AMELB
#          - DNSName
#        - ':9443/publisher'
#    Description: WSO2 API Manager Publisher URL.
#  Store:
#    Value: !Join
#      - ''
#      - - 'https://'
#        - !GetAtt
#          - WSO2AMELB
#          - DNSName
#        - ':9443/store'
#    Description: WSO2 API Manager Store URL.
#  Carbon:
#    Value: !Join
#      - ''
#      - - 'https://'
#        - !GetAtt
#          - WSO2AMELB
#          - DNSName
#        - ':9443/carbon'
#    Description: WSO2 API Manager Console URL.
#  Credentials:
#    Value: !Join
#      - ''
#      - - 'Username: admin, '
#        - 'Password: admin'
#    Description: >-
#      WSO2 API Manager Admin Credentials. Please refer
#      https://docs.wso2.com/display/AM210/Maintaining+Logins+and+passwords to
#      change credentials.
Parameters:
  KeyPairName:
    Description: >-
      The key pair to establish a SSH connection to the web servers. This should
      be already created.
    Type: 'AWS::EC2::KeyPair::KeyName'
  CertificateName:
    Description: A previously uploaded certificate to use at the Load Balancer Listeners.
    Type: String
    MinLength: 1
  DBUsername:
    Description: The username to be used in the WSO2 AM DB.
    Type: String
    Default: root
    MinLength: 4
    AllowedPattern: '[A-Za-z0-9\-]+'
  DBPassword:
    Description: The password to be used in the WSO2 AM DB.
    Type: String
    Default: rootrootroot
    MinLength: 8
    NoEcho: true
Conditions: {}
  Mappings:
  AWSAMIRegionMap:
    ap-northeast-1:
      Ubuntu140464bit: ami-2e63924f
    ap-northeast-2:
      Ubuntu140464bit: ami-979258f9
    ap-south-1:
      Ubuntu140464bit: ami-4a90fa25
    ap-southeast-1:
      Ubuntu140464bit: ami-ea2bf989
    ap-southeast-2:
      Ubuntu140464bit: ami-396a415a
    eu-central-1:
      Ubuntu140464bit: ami-4bd03b24
    eu-west-1:
      Ubuntu140464bit: ami-02b62c71
    eu-west-2:
      Ubuntu140464bit: ami-63342007
    us-east-1:
      Ubuntu140464bit: ami-a9e2a9bf
    us-east-2:
      Ubuntu140464bit: ami-9f0627fa
    us-west-1:
      Ubuntu140464bit: ami-992661f9
    us-west-2:
      Ubuntu140464bit: ami-42569022
    ca-central-1:
      Ubuntu140464bit: ami-beea56da
    sa-east-1:
      Ubuntu140464bit: ami-8df695e1
  AWSAnalyticsAMIRegionMap:
    ap-northeast-1:
      Ubuntu140464bit: ami-2e63924f
    ap-northeast-2:
      Ubuntu140464bit: ami-979258f9
    ap-south-1:
      Ubuntu140464bit: ami-4a90fa25
    ap-southeast-1:
      Ubuntu140464bit: ami-ea2bf989
    ap-southeast-2:
      Ubuntu140464bit: ami-396a415a
    eu-central-1:
      Ubuntu140464bit: ami-4bd03b24
    eu-west-1:
      Ubuntu140464bit: ami-02b62c71
    eu-west-2:
      Ubuntu140464bit: ami-63342007
    us-east-1:
      Ubuntu140464bit: ami-a9e2a9bf
    us-east-2:
      Ubuntu140464bit: ami-c53011a0
    us-west-1:
      Ubuntu140464bit: ami-992661f9
    us-west-2:
      Ubuntu140464bit: ami-42569022
    ca-central-1:
      Ubuntu140464bit: ami-beea56da
    sa-east-1:
      Ubuntu140464bit: ami-8df695e1
